# model

./: pyproject.toml  requirements.txt
src/model/: blip.py  cam.py  mtc.py  stream.py
