[project]
name = "model"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = [
    "transformers>=4.45.1",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "python-multipart>=0.0.12",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
